PLANET-4560 Move rules to campaign style / fix spacing
* Remove unneeded button height
* Move background-color to oceans stylesheets
* Remove spacing around cell contents
* Add text domain to translations

--- a/assets/src/styles/blocks/Spreadsheet.scss
+++ b/assets/src/styles/blocks/Spreadsheet.scss
@@ -45,10 +45,8 @@
 .spreadsheet-default-sort {
   display: none;
   border: 1px solid;
-  background-color: #fff;
   letter-spacing: .06rem;
   line-height: 38px;
-  height: 38px;
   margin-left: 5px;
 }
 
